--- a/casasamaritanonorte/packages.config
+++ b/casasamaritanonorte/packages.config
@@ -10,7 +10,8 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net461" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net461" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net461" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
+  <package id="EntityFramework6.Npgsql" version="6.4.1" targetFramework="net461" />
   <package id="Facebook" version="7.0.6" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
@@ -44,8 +45,25 @@
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="3.1.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
@@ -67,14 +85,24 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Npgsql" version="4.1.5" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
